--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ save/models/client/*
 !save/models/client/README.md
 save/models/server/*
 !save/models/server/README.md
+
+data_provider/FLIP/CROMIS*
