--- a/requirements.txt
+++ b/requirements.txt
@@ -1,212 +1,30 @@
-absl-py==0.14.1
-alabaster==0.7.8
-alembic==1.4.1
-antlr4-python3-runtime==4.8
-apturl==0.5.2
-attrs==21.2.0
-Babel==2.6.0
-backports.entry-points-selectable==1.1.0
-beautifulsoup4==4.10.0
-black @ git+git://github.com/psf/black@2f3fa1f6d0cbc2a3f31c7440c422da173b068e7b
-blinker==1.4
-boto3==1.20.0
-botocore==1.23.1
-Brlapi==0.7.0
-cachetools==4.2.4
-certifi==2020.6.20
-cfgv==3.3.1
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==7.1.2
-cloudpickle==2.0.0
-colorama==0.4.4
-command-not-found==0.3
-cryptography==2.8
-cucim==21.10.0
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.29.21
-databricks-cli==0.16.2
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-detectron2==0.4+cu101
-distlib==0.3.3
-distro==1.4.0
-distro-info===0.23ubuntu1
-docker==5.0.3
-docopt==0.6.2
-docutils==0.16
-einops==0.3.2
-entrypoints==0.3
-feedparser==5.2.1
-filelock==3.3.0
-Flask==2.0.2
-fuckit==4.8.1
-fuse-python==1.0.0
-future==0.18.2
-fvcore==0.1.3.post20210317
-gdown==4.2.0
-gitdb==4.0.9
-GitPython==3.1.24
-gitsome==0.8.0
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-greenlet==1.1.2
-grpcio==1.41.1
-grpcio-tools==1.41.1
-gunicorn==20.1.0
-httplib2==0.14.0
-huggingface-hub==0.1.0
-identify==2.3.0
-idna==2.8
-imageio==2.9.0
-imagesize==1.2.0
-imgaug==0.4.0
-importlib-metadata==4.8.1
-iniconfig==1.1.1
-iopath==0.1.9
-itk==5.2.1.post1
-itk-core==5.2.1.post1
-itk-filtering==5.2.1.post1
-itk-io==5.2.1.post1
-itk-numerics==5.2.1.post1
-itk-registration==5.2.1.post1
-itk-segmentation==5.2.1.post1
-itsdangerous==2.0.1
-Jinja2==3.0.2
+boto3==1.20.5
+botocore==1.23.5
+cycler==0.11.0
+grpcio==1.41.0
+grpcio-tools==1.41.0
 jmespath==0.10.0
 joblib==1.1.0
-keyring==18.0.1
-kiwisolver==1.2.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lmdb==1.2.1
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.5
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.3.2
-mlflow==1.21.0
+kiwisolver==1.3.2
+matplotlib==3.4.3
 monai==0.7.0
-mpmath==1.2.1
-mypy-extensions==0.4.3
-mysql-connector-python==8.0.26
-netifaces==0.10.4
-networkx==2.5.1
 nibabel==3.2.1
-nodeenv==1.6.0
-numpy==1.20.3
-numpydoc==0.7.0
-oauthlib==3.1.0
-olefile==0.46
-omegaconf==2.1.1
-opencv-python==4.4.0.42
-openslide-python==1.1.2
-packaging==21.0
-pandas==1.1.3
-pathspec==0.9.0
-pexpect==4.6.0
-Pillow==7.2.0
-pipenv==2021.11.9
-pipreqs==0.4.11
-platformdirs==2.4.0
-pluggy==0.13.1
-ply==3.11
-portalocker==2.3.2
-pre-commit==2.15.0
-prometheus-client==0.12.0
-prometheus-flask-exporter==0.18.5
-prompt-toolkit==2.0.10
-protobuf==3.15.8
-psutil==5.8.0
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycocotools==2.0.2
-pycosat==0.6.3
-pycups==1.9.73
-pydicom==1.4.1
-pydot==1.4.2
-Pygments==2.3.1
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
+numpy==1.21.4
+packaging==21.2
+pandas==1.3.4
+Pillow==8.4.0
+protobuf==3.19.1
 pyparsing==2.4.7
-PyQt5==5.14.1
-pyRFC3339==1.1
-PySocks==1.7.1
-pytest==6.2.4
-python-apt==2.0.0+ubuntu0.20.4.6
-python-dateutil==2.8.1
-python-debian===0.1.36ubuntu1
-python-editor==1.0.4
-pytorch-ignite==0.4.5
-pytz==2019.3
-PyWavelets==1.1.1
-pyxdg==0.26
-PyYAML==5.3.1
-querystring-parser==1.2.4
-regex==2021.10.8
-reportlab==3.5.34
-requests==2.22.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-roman==2.0.0
-rsa==4.7.2
-ruamel.yaml==0.17.16
-ruamel.yaml.clib==0.2.6
+python-dateutil==2.8.2
+pytz==2021.3
 s3transfer==0.5.0
-sacremoses==0.0.46
-scikit-image==0.18.3
-scikit-learn==0.23.2
-scipy==1.7.1
-SecretStorage==2.3.1
-setproctitle==1.1.10
-Shapely==1.7.1
-simplejson==3.16.0
-sip==4.19.21
-six==1.15.0
-smmap==5.0.0
-soupsieve==2.2.1
-Sphinx==1.8.5
-SQLAlchemy==1.4.26
-sqlparse==0.4.2
-sympy==1.8
-systemd-python==234
-tabulate==0.8.9
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.8.0
-termcolor==1.1.0
+scikit-learn==1.0.1
+scipy==1.7.2
+six==1.16.0
 threadpoolctl==3.0.0
-tifffile==2021.10.12
-tokenizers==0.10.3
-toml==0.10.2
-tomli==1.2.1
-torch==1.10.0+cpu
-torchaudio==0.10.0+cpu
-torchvision==0.11.1+cpu
-tqdm==4.49.0
-transformers==4.12.2
-typing-extensions==3.10.0.2
-ubuntu-advantage-tools==27.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.26.4
-virtualenv==20.8.1
-virtualenv-clone==0.5.7
-wadllib==1.3.3
-wcwidth==0.1.8
-websocket-client==1.2.1
-Werkzeug==2.0.2
-xkit==0.0.0
-xonsh==0.9.13
-yacs==0.1.8
-yarg==0.1.9
-zipp==3.6.0
+torch==1.10.0+cu113
+torchaudio==0.10.0+cu113
+torchvision==0.11.1+cu113
+tqdm==4.62.3
+typing_extensions==4.0.0
+urllib3==1.26.7
